<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.com.encargalo.repartidor.Inicio_sesion.is_actregistrarusuario">

    <EditText
        android:id="@+id/is_ruedtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/is_varstringnombre" />
    <EditText
        android:id="@+id/is_ruedtApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/is_varstringapellido" />
    <EditText
        android:id="@+id/is_ruedtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/is_varstringcorreo" />
    <EditText
        android:id="@+id/is_ruedtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/is_varstringtelefono" />

    <Button
        android:id="@+id/is_rubtnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_varstringbtnregistrar" />

    <CheckBox
        android:id="@+id/is_ruchkbTerminosycondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_varstringchckterminos"/>

</LinearLayout>