<?xml version="1.0" encoding="utf-8"?><!--Creado por Duran Llamacuri Kevin - Universidad Continental - 2022-->
<!--Creado por Briceño Malpartida Douglas Igancio - Universidad Continental - 2022-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@drawable/outline_blue"
        android:padding="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_so_07_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/menu_soporte_acerca_de_desarrolladores_txt_autor"
            />

        <TextView
            android:id="@+id/txt_so_07_cargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/menu_soporte_acerca_de_desarrolladores_txt_cargo"
            />

        <TextView
            android:id="@+id/txt_so_07_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/menu_soporte_acerca_de_desarrolladores_txt_correo"
            />
    </LinearLayout>

</LinearLayout>