<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan_400"
    android:padding="@dimen/activity_margin"
    tools:context="mx.com.encargalo.repartidor.Inicio_sesion.ui.Mi_perfil.pf_frgdocagregados">

    <ImageButton
        android:id="@+id/pf_donebtnclose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/activity_margin"
        android:src="@color/transparentPrimary"
        android:layout_gravity="top|start"
        android:background="@drawable/pf_iconclose"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_margin="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/blackPrimary"
            android:text="@string/pf_varstringdocumentos_agregados_correctamente" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/blackPrimary"
            android:text="@string/pf_varstringeso_fue_rapido" />
    </LinearLayout>

    <Button
        android:id="@+id/pf_rubtnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:paddingHorizontal="50dp"
        android:layout_margin="@dimen/activity_margin"
        android:background="@drawable/redondeado_blanco"
        android:text="@string/pf_varstringvolver_a_inicio" />

</FrameLayout>