<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="@dimen/activity_margin"
    tools:context="mx.com.encargalo.repartidor.Inicio_sesion.ui.Pedidos.pe_frgordencompletada">
    <!--Creado por Duran Llamacuri Kevin - Universidad Continental - 2022-->
    <ImageButton
        android:id="@+id/pe_ocnebtnclose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/activity_margin"
        android:src="@color/transparentPrimary"
        android:layout_gravity="top|start"
        android:background="@drawable/pf_iconclose"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_margin="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/pe_ocptxtidorden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Headline_6"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/blackPrimary"
            android:text="@string/pe_varstringorden_entregada_exitosamente" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Subtitle_1"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/blackPrimary"
            android:text="@string/pe_varstringgracias" />
    </LinearLayout>

    <Button
        android:id="@+id/pe_ocbtnRegistrar"
        style="@style/textcolor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:paddingHorizontal="50dp"
        android:layout_margin="@dimen/activity_margin"
        android:background="@drawable/containedbtn_green"
        android:text="@string/pf_varstringvolver_a_inicio" />

</FrameLayout>