<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"><!--Creado por Duran Llamacuri Kevin - Universidad Continental - 2022-->

<fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_weight="1"
    tools:context="mx.com.encargalo.repartidor.Inicio_sesion.ui.Pedidos.pe_frgentregarorden"
    android:layout_height="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_weight="2"
    android:background="@color/grey_400"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/redondeado_blanco"
        android:layout_margin="@dimen/activity_margin"
        android:padding="@dimen/btn_type_padding"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/pe_etotxtidorden_fecha_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/pe_rgotxtidorden"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_margin"/>

        <TextView
            android:id="@+id/pe_etotxtnombretienda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/pe_rgotxtdireccion"/>

        <TextView
            android:id="@+id/pe_etotxtdireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/pe_rgotxtdireccion"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pe_etobtnDetalle"
                style="@style/textcolor3"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:background="@drawable/containedbtn_transparente"
                android:layout_height="wrap_content"
                android:text="@string/pe_varstringbtndetalle"/>

            <Button
                android:id="@+id/pe_etobtnChat"
                style="@style/textcolor3"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:background="@drawable/containedbtn_transparente"
                android:layout_height="wrap_content"
                android:text="@string/pe_varstringchat"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/pe_etobtncobrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Contained_button_green"
        android:text="@string/pe_varstringcobrar"
        />

</LinearLayout>

</ScrollView>

</LinearLayout>